# OS-Project

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
phase-1/: README.md
phase-1/python/: README.md  app.py  memory_allocator.py  pyproject.toml
src/: App.jsx  index.css
src/components/simulator/: ComparisonTable.jsx  EducationalSection.jsx  InputPanel.jsx  MemoryBlock.jsx  MemoryTimeline.jsx  MemoryVisualization.jsx  ProcessTable.jsx  ResultsPanel.jsx  StepControls.jsx  StepLog.jsx
src/components/ui/: select.jsx  toaster.jsx  tooltip.jsx  use-toast.js
src/pages/: Home.jsx
src/utils/: colors.js  memoryAllocator.js
