[project]
name = "memory-allocation-simulator-python"
version = "0.1.0"
description = "ICS 433 Phase 1 style memory allocation simulator (Tkinter desktop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.8", "ruff>=0.2"]

[tool.ruff]
line-length = 100
target-version = "py311"
